--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "python.pythonPath": "/Users/curtissmith/Dev/my_website/mysite_venv/bin/python3.8"
+    "python.pythonPath": "/Users/curtissmith/Dev/my_website/mysite_venv/bin/python3.8",
+    "liveServer.settings.port": 5501
 }
