--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,9 @@ geographiclib==1.52
 geopy==2.1.0
 numpy==1.21.0
 pandas==1.2.5
+plotly==5.1.0
 python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.1
+tenacity==8.0.1
